Mongo shell throws 'exception during autocomplete'

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.4.10, 3.6.0-rc0
    • Affects Version/s: 3.5.12
    • Component/s: Shell
    • None
    • Fully Compatible
    • ALL
    • v3.4
    • Platforms 2017-10-02
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      $ git describe
      r3.5.12-4-gdfc7ec9adb

      When I tab to autocomplete my collection named "collection" in my database, the shell throws the following exception:
      exception during autocomplete: "invalid 'in' operand o._proto_"

      Following is a copy and paste of my mongo shell session (note I press TAB after typing in "col" to have it autocomplete to "collection")

      [gulsef@localhost mongo]$ ./mongo
      MongoDB shell version v3.5.12-4-gdfc7ec9adb
      connecting to: mongodb://127.0.0.1:27017
      MongoDB server version: 3.5.12-4-gdfc7ec9adb
      Mongo-Hacker 0.0.14
      Server has startup warnings:
      2017-08-22T11:10:22.201+0100 I STORAGE [initandlisten]
      2017-08-22T11:10:22.202+0100 I STORAGE [initandlisten] ** WARNING: Using the XFS filesystem is strongly recommended with the WiredTiger storage engine
      2017-08-22T11:10:22.202+0100 I STORAGE [initandlisten] ** See http://dochub.mongodb.org/core/prodnotes-filesystem
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten]
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten] ** NOTE: This is a development version (3.5.12-4-gdfc7ec9adb) of MongoDB.
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten] ** Not recommended for production.
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten]
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten] ** WARNING: Access control is not enabled for the database.
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten] ** Read and write access to data and configuration is unrestricted.
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten]
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten] ** WARNING: This server is bound to localhost.
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten] ** Remote systems will be unable to connect to this server.
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten] ** Start the server with --bind_ip <address> to specify which IP
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten] ** addresses it should serve responses from, or with --bind_ip_all to
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten] ** bind to all interfaces. If this behavior is desired, start the
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten] ** server with --bind_ip 127.0.0.1 to disable this warning.
      2017-08-22T11:10:22.251+0100 I CONTROL [initandlisten]
      2017-08-22T11:20:44.294+0100 E QUERY [thread1] uncaught exception: don't know how to show [automationNotices]
      localhost(mongod-3.5.12-4-gdfc7ec9adb) test> use decimal
      switched to db decimal
      localhost(mongod-3.5.12-4-gdfc7ec9adb) decimal> db.colexception during autocomplete: "invalid 'in' operand o._proto_"

      Also note the "[thread1] uncaught exception: don't know how to show [automationNotices]" in the logs. Possibly related?

            Assignee:
            Mark Benvenuto
            Reporter:
            Josef Ahmad
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: