SERVER-30769 Mongo shell throws 'exception during autocomplete'